--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -5,4 +5,9 @@
       "Microsoft.AspNetCore": "Information"
     }
   }
+  "ConnectionStrings": {
+    //"DefaultConnection": "Server=ABID\\SQLEXPRESS;Database=datingapp;Trusted_Connection=True;Encrypt=False;",
+    "DefaultConnection": "Server=ABID-IT\\SQLEXPRESS;Database=datingapp;Trusted_Connection=True;Encrypt=False;"
+  }
+
 }
