end of section 2

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,10 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Information"
     }
-  }
+  },
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=ABID\\SQLEXPRESS;Database=datingapp;Trusted_Connection=True;Encrypt=False;",
-    "DefaultConnection": "Server=ABID-IT\\SQLEXPRESS;Database=datingapp;Trusted_Connection=True;Encrypt=False;"
+    "DefaultConnection": "Server=ABID\\SQLEXPRESS;Database=datingapp;Trusted_Connection=True;Encrypt=False;"
+    //"DefaultConnection": "Server=ABID-IT\\SQLEXPRESS;Database=datingapp;Trusted_Connection=True;Encrypt=False;"
   }
 
 }
