--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,8 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=ABID\\SQLEXPRESS;Database=datingapp;Trusted_Connection=True;Encrypt=False;"
-    //"DefaultConnection": "Server=ABID-IT\\SQLEXPRESS;Database=datingapp;Trusted_Connection=True;Encrypt=False;"
+    //"DefaultConnection": "Server=ABID\\SQLEXPRESS;Database=datingapp;Trusted_Connection=True;Encrypt=False;"
+    "DefaultConnection": "Server=ABID-IT\\SQLEXPRESS;Database=datingapp;Trusted_Connection=True;Encrypt=False;"
   },
   "TokenKey": "super secret unforgettable skyasd asdas daiusjhbdakjshdg bakjshdb aklsjhdb aslkjdb adas dasdasdasd"
 
