--- a/client/angular.json
+++ b/client/angular.json
@@ -27,6 +27,7 @@
             "styles": [
               "node_modules/ngx-bootstrap/datepicker/bs-datepicker.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootswatch/dist/united/bootstrap.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
               "node_modules/ngx-toastr/toastr.css" ,
               "src/styles.css"
@@ -63,8 +64,8 @@
         "serve": {
           "options": {
             "ssl": true,
-            "sslCert": "./ssl/localhost.pem",
-            "sslKey": "./ssl/localhost-key.pem"
+            "sslCert": "./ssl/localhost1.pem",
+            "sslKey": "./ssl/localhost-key1.pem"
           },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
