--- a/client/angular.json
+++ b/client/angular.json
@@ -64,8 +64,8 @@
         "serve": {
           "options": {
             "ssl": true,
-            "sslCert": "./ssl/localhost1.pem",
-            "sslKey": "./ssl/localhost-key1.pem"
+            "sslCert": "./ssl/localhost.pem",
+            "sslKey": "./ssl/localhost-key.pem"
           },
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
