--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dl6riy9yi",
+    "ApiKey": "875374194219244",
+    "ApiSecret": "yBdjBsScKrqJUD-2N4QUR9uEY9E"
+  }
 }
